fixed index page content alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,8 +23,16 @@ textarea {
     min-height: 100vh;
 }
 
-.container {
+.container1 {
     padding: 0 2rem;
     margin: 2rem 0;
-    flex: 1;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    /* align-items: center; */
 }
+
+/* .inner-container {
+    display: flex;
+    justify-content: center;
+} */
